# data-structures

./: .gitignore  README.md  diagram.mdj
.github/workflows/: c.yml  cpp.yml  php.yml  python3.yml
c/: .gitignore  CMakeLists.txt
c++/: .gitignore  CMakeLists.txt
c++/demo/: CMakeLists.txt  linklist.cpp  queue.cpp  stack.cpp
c++/extra/: queue.md
c++/src/: CMakeLists.txt
c++/src/include/: LinkedList.hpp  Queue.hpp  SinglyNode.hpp  Stack.hpp  Stack.test.hpp
c++/tests/: CMakeLists.txt  LinkedList.test.cpp  Queue.test.cpp  SinglyNode.test.cpp  Stack.test.cpp
c/demo/: CMakeLists.txt  linklist.c  main.c  queue.c  stack.c
c/extra/: link-list.md  queue.md  stack.md
c/src/: CMakeLists.txt  link-list.c  queue.c  stack.c
c/src/include/: common.h  link-list.h  queue.h  stack.h
c/tests/: CMakeLists.txt  link-list.test.cpp  queue.test.cpp  stack.test.cpp
js/shared/: decl.js
js/singly-link-list/: index.html  singly-link-list.js  singly-link-list.test.js  singly-node.js  singly-node.test.js
js/stack/: index.html  stack.js  stack.test.js
php/: composer.json
php/extra/: queue.md
php/spec/: Queue.spec.php  SinglyLinkList.spec.php  SinglyLinkListNode.spec.php  Stack.spec.php
php/src/: Queue.php  SinglyLinkList.php  SinglyLinkListNode.php  Stack.php
python3/: main.py  queue.py  singly_link_list.py  singly_link_list_node.py  stack.py
python3/extra/: queue.md
python3/tests/: test_queue.py  test_singly_link_list.py  test_singly_link_list_node.py  test_stack.py
